--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
 .search-head {
   display: flex;
   justify-content: right;
-  margin: 5% 10px 3% 10px;
+  margin: 6vh 10px 6vh 10px;
   width: 40%;
 }
 
@@ -70,6 +70,8 @@
   aspect-ratio: 1;
   color: #eeeeee;
   background-color: #161616;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .search-head button:active {
